# des_des3

./: .gitignore  README.md  pyproject.toml
des_des3/: app.py
tests/: ciphertest-DES.txt  ciphertest-DES3.txt  plaintext.txt
