[tool.poetry]
name = "des-des3"
version = "0.1.0"
description = ""
authors = ["DNetz <daniel.netzel001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
crypto = "^1.4.1"
pycryptodome = "^3.20.0"
cryptography = "^42.0.5"
pycryptodomex = "^3.20.0"
pycryptodome-test-vectors = "^1.0.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
